tests/invalid/simple/Return_CompileFail_3.whiley
bool f(int x, int y):
    return x+y
